# example-a2a

./: .gitignore  README.md  main.py  pyproject.toml  sample_client.py
google_adk_agent/: README.md  agent.py  agent_model.py
langgraph_react_agent/: README.md  react_agent.py  tools.py
ollama_setup/: README.md  ollama_sample.py
phoenix_example/: README.md  sample_phoenix_trace.py
setup_a2a_server/: README.md
