[project]
name = "example-a2a"
version = "0.1.0"
description = "Repository for a sample setup of Agent to agent (A2A) communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=1.0.3",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.136.1",
    "ollama>=0.6.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.47.0",
]
