[project]
name = "example-a2a"
version = "0.1.0"
description = "Repository for a sample setup of Agent to agent (A2A) communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=1.0.3",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.136.1",
    "google-adk>=2.1.0",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "litellm>=1.85.1",
    "ollama>=0.6.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.47.0",
]
